--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,8 @@
 // components
 @import "./components/button";
 @import "./components/maintitle";
+@import "./components/textcardwithicon";
+
 //layouts
 @import "./layouts/navbar";
 @import "./layouts/header";
@@ -17,4 +19,3 @@
 @import "./page/home";
 @import "./page/notfound";
 // themes
-
