add features section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import "./components/button";
 @import "./components/maintitle";
 @import "./components/textcardwithicon";
+@import "./components/sectiontitle";
 
 //layouts
 @import "./layouts/navbar";
