--- a/src/scss/components/_maintitle.scss
+++ b/src/scss/components/_maintitle.scss
@@ -1,6 +1,7 @@
 .maintitle {
   text-align: center;
-  margin-block: $--margin-m;
+  margin-top: $--margin-m;
+  @include media-prop(padding-bottom, 6.4rem, 4.8rem, 3.2rem);
   &-top {
     font-size: 1.4rem;
     background-color: $--color-ternary;
