--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -1,6 +1,8 @@
 .home {
   &-features {
     @extend .header;
+    @include media-prop(margin-top, "nil", 2.4rem, 2.4rem);
+    @include media-prop(padding-bottom, 8rem, 6.4rem, 4.8rem);
 
     &__right {
       display: flex;
@@ -12,6 +14,43 @@
             margin-bottom: 2rem;
           }
         }
+      }
+    }
+  }
+  &-add {
+    padding-inline: 3.2rem;
+
+    &__top {
+      padding-top: 3.2rem;
+      display: flex;
+      justify-content: center;
+      @include media-prop(flex-direction, row, column, column);
+      align-items: center;
+      gap: 3.2rem;
+      &-item {
+        display: flex;
+        align-items: center;
+        white-space: nowrap;
+        width: 10.6rem;
+        justify-content: space-between;
+        @include media-prop(margin-left, 3.2rem, 0, 0);
+        &-img {
+          margin-right: 0.8rem;
+        }
+        &-text {
+          @include media-prop(font-size, 1.8rem, 1.8rem, 1.6rem);
+          color: $--color-black-2;
+        }
+      }
+    }
+    &__bottom {
+      padding-top: 4rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+      &-item {
+        @extend .header__left__bottom-actions__item;
       }
     }
   }
