add faq section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import "./components/maintitle";
 @import "./components/textcardwithicon";
 @import "./components/sectiontitle";
+@import "./components/accordion";
 
 //layouts
 @import "./layouts/navbar";
