--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,8 @@
 @import "./components/textcardwithicon";
 @import "./components/sectiontitle";
 @import "./components/accordion";
+@import "./components/imagecard";
+@import "./components/CommentUserDetails";
 
 //layouts
 @import "./layouts/navbar";
