--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -85,4 +85,15 @@
       }
     }
   }
+  &-blog {
+    @include media-prop(margin, 6.4rem 11.2rem, 4.8rem 0, 3.2rem 0);
+    &__top {
+      display: grid;
+
+      @include media-prop(grid-template-columns, repeat(3, 1fr), 1fr, 1fr);
+      @include media-prop(gap, 3.2rem, 3.2rem, 1.6rem);
+    }
+    &__bottom {
+    }
+  }
 }
