--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import "./components/accordion";
 @import "./components/imagecard";
 @import "./components/CommentUserDetails";
+@import "./components/freetrial";
 
 //layouts
 @import "./layouts/navbar";
