--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@
 @import "./components/imagecard";
 @import "./components/CommentUserDetails";
 @import "./components/freetrial";
+@import "./components/ourclientsitem";
 
 //layouts
 @import "./layouts/navbar";
