--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 //layouts
 @import "./layouts/navbar";
 @import "./layouts/header";
+@import "./layouts/footer";
 //pages
 @import "./page/home";
 @import "./page/notfound";
