--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -11,6 +11,20 @@
         font-weight: bold;
         color: $--color-black-2;
         margin-bottom: 1.6rem;
+        & span {
+          position: relative;
+          &::before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 0.7rem;
+            background-color: $--color-primary;
+            bottom: 0; 
+            border-top-left-radius: 0.6rem;
+            border-bottom-right-radius:0.6rem;
+            
+          }
+        }
       }
       &-description {
         @include media-prop(font-size, 1.8rem, 1.8rem, 1.6rem);
