--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -20,7 +20,7 @@
         color: $--color-black-2;
         max-width: 80%;
         &-counter {
-          margin-right: 1rem;
+          margin-inline: 1rem;
           font-size: 1.8rem;
         }
         &-q {
