--- a/src/scss/page/_notfound.scss
+++ b/src/scss/page/_notfound.scss
@@ -1,6 +1,7 @@
 .notfound {
   width: 100vw;
   height: calc(100vh - 17rem);
+  margin-bottom: 5rem;
   & img {
     width: 100%;
     object-fit: contain;
