--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: center;
     & img {
-      margin-right: 0.5rem;
+      margin-inline: 0.5rem;
     }
   }
   &--primary {
