--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -58,6 +58,9 @@
           color: $--color-black-2;
           display: flex;
           align-items: center;
+          & img {
+            margin-inline: 1.2rem;
+          }
         }
       }
     }
@@ -78,11 +81,15 @@
         color: $--color-primary;
         @include media-prop(font-size, 1.6rem, 1.2rem, 1.2rem);
         white-space: nowrap;
-        border-left: 1px solid $--color-darker-white;
-        padding-inline: 1rem;
         &:first-child {
-          border-left: none;
+          @include direction(1px solid $--color-gray, transparent, border-left);
+          @include direction(
+            1px solid $--color-gray,
+            border-right,
+            transparent
+          );
         }
+        padding-inline: 1rem;
       }
     }
   }
