--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -31,11 +31,11 @@
         align-items: center;
         white-space: nowrap;
         justify-content: space-between;
-        
+
         margin: auto;
 
         &-img {
-          margin-right: 0.8rem;
+          margin-inline: 0.8rem;
         }
         &-text {
           @include media-prop(font-size, 1.8rem, 1.8rem, 1.6rem);
